tests/endpoint_macros_compile_fail/duplicate_param.rs
use better_fetch::EndpointParamsDerive;

#[derive(EndpointParamsDerive)]
#[endpoint(path = "/items/:id")]
struct DuplicateParam {
    id: u64,
    #[param(rename = "id")]
    other: String,
}

fn main() {}
